Fix Income Statement Short Cash calculation and improve number parsing for negative values

--- a/Frontend/views/cash-counter.html
+++ b/Frontend/views/cash-counter.html
@@ -155,7 +155,7 @@
             <table class="table table-bordered table-sm mb-0">
                 <thead class="table-primary text-white sticky-top" style="z-index: 1;">
                     <tr class="text-center">
-                        <th style="width: 45%;" id="invoiceHeader">Invoice No</th>
+                        <th style="width: 45%;" id="invoiceHeader">INVOICE NUMBER</th>
                         <th style="width: 45%;">Sales</th>
                         <th style="width: 10%;">Action</th>
                     </tr>
