--- a/Frontend/views/sub-dept-wise-report.html
+++ b/Frontend/views/sub-dept-wise-report.html
@@ -583,16 +583,7 @@
             <div class="data-table-section">
                 <div class="table-responsive">
                     <table class="table table-bordered table-striped custom-table mb-0">
-                        <thead>
-                            <tr>
-                                <th>Branch</th>
-                                <th>Sub-Department</th>
-                                <th class="text-end">Discount</th>
-                                <th class="text-end">Disc %</th>
-                                <th class="text-end">Net Sale</th>
-                                <th class="text-end">Daily Average</th>
-                            </tr>
-                        </thead>
+
                         <tbody id="reportTableBody">
                             <tr>
                                 <td colspan="6" class="text-center py-4 text-muted">No data available. Please generate
@@ -605,6 +596,7 @@
                                 <td class="text-end" id="tblDisc">0</td>
                                 <td></td>
                                 <td class="text-end" id="tblNet">0</td>
+                                <td class="text-end" id="tblCost">0</td>
                                 <td class="text-end" id="tblDaily">0</td>
                             </tr>
                         </tfoot>
