--- a/Frontend/views/settings.html
+++ b/Frontend/views/settings.html
@@ -543,8 +543,9 @@
                                         <table class="table table-hover table-bordered">
                                             <thead class="table-light">
                                                 <tr>
-                                                    <th style="width: 50%;">Backup Name</th>
+                                                    <th style="width: 40%;">Backup Name</th>
                                                     <th style="width: 20%;">Date Created</th>
+                                                    <th style="width: 10%;">Type</th>
                                                     <th style="width: 15%;">Size</th>
                                                     <th style="width: 15%;" class="text-center">Actions</th>
                                                 </tr>
