Update from Antigravity: Fix item registration, add warehouse item deletion, and sync supplier filter

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -544,6 +544,39 @@
                                 <li>
                                     <input type="checkbox" id="settings" class="form-check-input"><label
                                         class="checkbox-label fw-bold-label" for="settings">Settings</label>
+                                    <ul>
+                                        <li><input type="checkbox" id="settings_company" class="form-check-input"><label
+                                                class="checkbox-label" for="settings_company">Company Settings</label>
+                                        </li>
+                                        <li><input type="checkbox" id="settings_invoice" class="form-check-input"><label
+                                                class="checkbox-label" for="settings_invoice">Invoice Settings</label>
+                                        </li>
+                                        <li><input type="checkbox" id="settings_tax" class="form-check-input"><label
+                                                class="checkbox-label" for="settings_tax">Tax Settings</label></li>
+                                        <li><input type="checkbox" id="settings_backup" class="form-check-input"><label
+                                                class="checkbox-label" for="settings_backup">Backup Settings</label>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="warehouse" class="form-check-input"><label
+                                        class="checkbox-label fw-bold-label" for="warehouse">Warehouse</label>
+                                    <ul>
+                                        <li><input type="checkbox" id="wh_supplier" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_supplier">WH Supplier</label>
+                                        </li>
+                                        <li><input type="checkbox" id="wh_customer" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_customer">WH Customer</label>
+                                        </li>
+                                        <li><input type="checkbox" id="wh_item" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_item">Item Registration</label>
+                                            <ul>
+                                                <li><input type="checkbox" id="wh_delete_item"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_delete_item">Can Delete</label></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
