Enhance WH Purchase: Item Search fixes, Keyboard Nav(No loop), Shortcuts(Alt+S), UI Refresh

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -568,6 +568,21 @@
                                         <li><input type="checkbox" id="wh_customer" class="form-check-input"><label
                                                 class="checkbox-label" for="wh_customer">WH Customer</label>
                                         </li>
+                                        <li><input type="checkbox" id="wh_purchase" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_purchase">WH Purchase</label>
+                                            <ul>
+                                                <li><input type="checkbox" id="wh_purchase_edit"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_purchase_edit">WH Purchase Edit</label></li>
+                                                <li><input type="checkbox" id="wh_purchase_edit_posted"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_purchase_edit_posted">WH Purchase Edit Posted</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_purchase_delete"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_purchase_delete">WH Purchase Delete</label></li>
+                                            </ul>
+                                        </li>
                                         <li><input type="checkbox" id="wh_item" class="form-check-input"><label
                                                 class="checkbox-label" for="wh_item">Item Registration</label>
                                             <ul>
