--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -583,6 +583,22 @@
                                                         for="wh_purchase_delete">WH Purchase Delete</label></li>
                                             </ul>
                                         </li>
+                                        <li><input type="checkbox" id="wh_purchase_return"
+                                                class="form-check-input"><label class="checkbox-label"
+                                                for="wh_purchase_return">WH Purchase Return</label>
+                                            <ul>
+                                                <li><input type="checkbox" id="wh_purchase_return_edit"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_purchase_return_edit">Edit</label></li>
+                                                <li><input type="checkbox" id="wh_purchase_return_edit_posted"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_purchase_return_edit_posted">Edit Posted</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_purchase_return_delete"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_purchase_return_delete">Delete</label></li>
+                                            </ul>
+                                        </li>
                                         <li><input type="checkbox" id="wh_item" class="form-check-input"><label
                                                 class="checkbox-label" for="wh_item">Item Registration</label>
                                             <ul>
