Fix Audit Edit & Stock, and add Live Stock Display to WH Purchase/Return

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -534,8 +534,7 @@
                                     <input type="checkbox" id="stock" class="form-check-input"><label
                                         class="checkbox-label fw-bold-label" for="stock">Stock</label>
                                     <ul>
-                                        <li><input type="checkbox" id="stock_audit" class="form-check-input"><label
-                                                class="checkbox-label" for="stock_audit">Stock Audit</label></li>
+
                                         <li><input type="checkbox" id="stock_adjustments"
                                                 class="form-check-input"><label class="checkbox-label"
                                                 for="stock_adjustments">Stock Adjustments</label></li>
@@ -606,6 +605,9 @@
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="wh_delete_item">Can Delete</label></li>
                                             </ul>
+                                        </li>
+                                        <li><input type="checkbox" id="wh_stock_audit" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_stock_audit">WH Stock Audit</label>
                                         </li>
                                     </ul>
                                 </li>
